--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_text">#181D2D</color>
+    <color name="secondary_text">#AAAAAA</color>
+
+    <color name="primary">#324A59</color>
 </resources>
