--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="secondary_text">#AAAAAA</color>
 
     <color name="primary">#324A59</color>
+    <color name="placeholder">#C1C7D0</color>
 </resources>
