--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -105,6 +105,7 @@
         android:layout_marginEnd="41dp"
         android:background="@drawable/btn_forward"
         android:src="@drawable/ic_arrow"
+        android:onClick="onClickForward"
         app:layout_constraintTop_toBottomOf="@+id/layout_main"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:onClick="onClick"
+        android:onClick="onClickSignUp"
         android:fontFamily="@font/poppins_medium"
         android:text="@string/sign_in"
         android:textColor="@color/primary"
