--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="32dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginStart="26dp">
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="26dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
         <ImageButton
             android:id="@+id/bt_buy_light"
@@ -38,9 +41,9 @@
             android:id="@+id/tv_greening"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
             android:text="@string/greetings"
             android:textColor="@color/secondary_text"
-            android:fontFamily="@font/poppins_medium"
             android:textSize="14sp"
             tools:ignore="MissingConstraints" />
 
@@ -56,5 +59,15 @@
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fr_categories"
+        android:name="com.example.coffeehouse.CategoriesFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        tools:layout="@layout/fragment_categories" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
