--- a/app/src/main/res/drawable/btn_primary.xml
+++ b/app/src/main/res/drawable/btn_primary.xml
@@ -4,6 +4,8 @@
     <shape android:shape="rectangle">
         <solid android:color="@color/primary"/>
         <corners android:radius="100dp"/>
+        <stroke android:width="2dp"
+                android:color="@color/primary"/>
     </shape>
 </item>
 </selector>
