--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:text="@string/checkout"
             android:layout_marginTop="12dp"
-            android:background="@drawable/btn_wide"/>
+            android:background="@drawable/btn_primary"/>
 
         <TextView
             android:id="@+id/textView8"
