--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -63,11 +63,11 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fr_categories"
         android:name="com.example.coffeehouse.CategoriesFragment"
+        tools:layout="@layout/fragment_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        tools:layout="@layout/fragment_categories" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
