--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -7,6 +7,7 @@
     tools:context=".CategoriesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ww"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,55 +24,73 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             android:layout_marginTop="18dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp">
+            android:layout_marginHorizontal="24dp"
+            android:paddingVertical="2dp">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_coffee"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_wide"
-                android:baselineAligned="false"
-                android:fontFamily="@font/poppins_medium"
-                android:minHeight="0dp"
+                android:layout_width="90dp"
+                android:layout_height="36dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/coffee"
-                android:textAllCaps="false"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                style="@style/Button.Primary"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_snacks"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_wide"
-                android:baselineAligned="false"
-                android:fontFamily="@font/poppins_medium"
-                android:minHeight="0dp"
+                android:layout_width="90dp"
+                android:layout_height="34dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_dessert"
+                app:layout_constraintStart_toEndOf="@+id/btn_coffee"
+                app:layout_constraintTop_toTopOf="parent"
+                style="@style/Button.Secondary"
                 android:text="@string/Snacks"
-                android:textAllCaps="false"
-                android:textSize="14sp"
-                android:layout_marginStart="14dp"/>
+                android:textSize="14sp" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_dessert"
-                android:layout_width="110dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_wide"
-                android:baselineAligned="false"
-                android:fontFamily="@font/poppins_medium"
-                android:minHeight="0dp"
+                android:layout_width="92dp"
+                android:layout_height="34dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/Dessert"
-                android:textAllCaps="false"
                 android:textSize="14sp"
-                android:layout_marginStart="14dp"/>
-
-        </LinearLayout>
+                style="@style/Button.Secondary"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <!--
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fr_categories_coffee"
+        android:name="com.example.coffeehouse.CategoriesCoffeeFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/cl_buttons"
+        tools:layout="@layout/fragment_categories_coffee" />
+       -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fr_categories_snacks"
+        android:name="com.example.coffeehouse.CategoriesSnacksFragment"
+        android:paddingHorizontal="-8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/cl_buttons"
+        tools:layout="@layout/fragment_categories_snaks" />
 
 </FrameLayout>
