--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,12 +10,28 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/primary</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="Theme.CoffeeHouse.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Button.Primary" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_primary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="elevation">0dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    <style name="Button.Secondary" parent="Widget.AppCompat.Button">
+        <item name="android:layout_margin">1dp</item>
+        <item name="android:background">@drawable/btn_secondary</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="elevation">0dp</item>
+        <item name="textAllCaps">false</item>
     </style>
     <style name="Theme.CoffeeHouse.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.CoffeeHouse.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
