--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -42,55 +42,46 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/coffee"
                 android:textSize="14sp"
-                style="@style/Button.Primary"/>
+                android:background="@drawable/btn_primary"
+                android:textColor="@color/white"
+                style="@style/stdButton"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_snacks"
                 android:layout_width="90dp"
-                android:layout_height="34dp"
+                android:layout_height="36dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btn_dessert"
                 app:layout_constraintStart_toEndOf="@+id/btn_coffee"
                 app:layout_constraintTop_toTopOf="parent"
-                style="@style/Button.Secondary"
+                style="@style/stdButton"
                 android:text="@string/Snacks"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:background="@drawable/btn_secondary"
+                android:textColor="@color/primary_text"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_dessert"
                 android:layout_width="92dp"
-                android:layout_height="34dp"
+                android:layout_height="36dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="@string/Dessert"
                 android:textSize="14sp"
-                style="@style/Button.Secondary"/>
+                style="@style/stdButton"
+                android:background="@drawable/btn_secondary"
+                android:textColor="@color/primary_text"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <!--
+
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fr_categories_coffee"
-        android:name="com.example.coffeehouse.CategoriesCoffeeFragment"
+        android:id="@+id/fr_categories_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_buttons"
-        tools:layout="@layout/fragment_categories_coffee" />
-       -->
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fr_categories_snacks"
-        android:name="com.example.coffeehouse.CategoriesSnacksFragment"
-        android:paddingHorizontal="-8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_buttons"
-        tools:layout="@layout/fragment_categories_snaks" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
 </FrameLayout>
