--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,19 +17,9 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-    <style name="Button.Primary" parent="Widget.AppCompat.Button">
-        <item name="android:background">@drawable/btn_primary</item>
-        <item name="android:textColor">@color/white</item>
+    <style name="stdButton" parent="Widget.AppCompat.Button">
         <item name="fontFamily">@font/poppins_medium</item>
-        <item name="elevation">0dp</item>
-        <item name="textAllCaps">false</item>
-    </style>
-    <style name="Button.Secondary" parent="Widget.AppCompat.Button">
         <item name="android:layout_margin">1dp</item>
-        <item name="android:background">@drawable/btn_secondary</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/primary_text</item>
-        <item name="fontFamily">@font/poppins_medium</item>
         <item name="elevation">0dp</item>
         <item name="textAllCaps">false</item>
     </style>
