--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     
     <color name="items_background">#F7F8FB</color>
     <color name="stroke">#D8D8D8</color>
+
+    <color name="separator_color">#F4F5F7</color>
 </resources>
