--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.authentication.AuthenticationActivity">
+    tools:context=".ui.AuthenticationActivity">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fr_authentication"
         android:name="androidx.navigation.fragment.NavHostFragment"
