--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,78 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.fragment.app.FragmentContainerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_container_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
-
-    <!--
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="26dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="1dp"
+        android:theme="@style/Theme.CoffeeHouse.AppBarOverlay"
         tools:ignore="MissingConstraints">
 
-        <ImageButton
-            android:id="@+id/bt_buy_light"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="18dp"
-            android:background="@drawable/ic_buy"
-            android:backgroundTint="@color/primary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/bt_profile_light"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/white"/>
 
-        <ImageButton
-            android:id="@+id/bt_profile_light"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_profile"
-            android:backgroundTint="@color/primary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <TextView
-            android:id="@+id/tv_greening"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/greetings"
-            android:textColor="@color/secondary_text"
-            android:textSize="14sp"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:id="@+id/profile_name_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/profile_name"
-            android:textColor="@color/primary_text"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_greening"
-            tools:ignore="MissingConstraints" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fr_categories"
-        android:name="com.example.coffeehouse.CategoriesFragment"
-        tools:layout="@layout/fragment_categories"
+    <fragment
+        android:id="@+id/fragment_main_menu"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_marginHorizontal="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/menu_navigation"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/bg_navbar"
+        android:elevation="0dp"
+        android:translationZ="0dp"
+        app:itemIconSize="24dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-    -->
+        app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@color/selector_nav_item_color"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
