--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CategoriesFragment">
+    tools:context=".ui.CategoriesFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ww"
+    <LinearLayout
+        android:id="@+id/categories_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="18dp"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/categories"
@@ -23,14 +23,12 @@
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_buttons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
             android:layout_marginTop="18dp"
-            android:layout_marginHorizontal="24dp"
             android:paddingVertical="2dp">
 
             <androidx.appcompat.widget.AppCompatButton
@@ -74,14 +72,11 @@
                 android:textColor="@color/primary_text"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fr_categories_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        <FrameLayout
+            android:id="@+id/fr_categories_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="18dp"/>
+    </LinearLayout>
 
 </FrameLayout>
