--- a/app/src/main/res/layout/item_categories_coffee.xml
+++ b/app/src/main/res/layout/item_categories_coffee.xml
@@ -7,7 +7,8 @@
     android:layout_height="96dp"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
-    android:paddingHorizontal="10dp">
+    android:paddingHorizontal="10dp"
+    android:layout_marginVertical="9dp">
 
     <ImageView
         android:id="@+id/iv_product_image"
