--- a/app/src/main/res/navigation/botton_menu_graph.xml
+++ b/app/src/main/res/navigation/botton_menu_graph.xml
@@ -2,17 +2,21 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/menu"
-    android:id="@+id/menu_navigation">
+    app:startDestination="@id/menu">
 
     <fragment
         android:id="@+id/menu"
-        android:name="com.example.coffeehouse.ui.MenuFragment"
+        android:name="com.example.coffeehouse.ui.CategoriesFragment"
         android:label="fragment_menu"
-        tools:layout="@layout/fragment_menu" />
+        tools:layout="@layout/fragment_categories" />
     <fragment
         android:id="@+id/history"
         android:name="com.example.coffeehouse.ui.HistoryFragment"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/profile"
+        android:name="com.example.coffeehouse.ui.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
