--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -13,7 +13,6 @@
         android:backgroundTint="@color/black"
         android:scaleX="-1"
         android:layout_marginTop="26dp"
-        android:layout_marginStart="26dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"/>
@@ -34,7 +33,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_margin="32dp"
+        android:layout_marginBottom="32dp"
         android:gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints">
