--- a/app/src/main/res/navigation/botton_menu_graph.xml
+++ b/app/src/main/res/navigation/botton_menu_graph.xml
@@ -6,9 +6,9 @@
 
     <fragment
         android:id="@+id/menu"
-        android:name="com.example.coffeehouse.ui.CategoriesFragment"
+        android:name="com.example.coffeehouse.ui.MenuFragment"
         android:label="fragment_menu"
-        tools:layout="@layout/fragment_categories" />
+        tools:layout="@layout/fragment_menu" />
     <fragment
         android:id="@+id/history"
         android:name="com.example.coffeehouse.ui.HistoryFragment"
