--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.SignUpFragment">
+    tools:context=".ui.RegisterFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -35,13 +35,13 @@
                 android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up"
+                android:text="@string/register"
                 android:textColor="@color/primary_text"
                 android:textSize="22sp"
                 android:fontFamily="@font/poppins_medium"
                 tools:ignore="MissingConstraints" />
             <TextView
-                android:id="@+id/tv_weclome_back"
+                android:id="@+id/text_view_welcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
@@ -69,7 +69,7 @@
                 android:onClick="onClickSignIn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_weclome_back" />
+                app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />
 
             <EditText
                 android:id="@+id/editText_phone_number"
@@ -109,7 +109,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editText_phone_number" />
 
             <EditText
-                android:id="@+id/editTextTextPassword"
+                android:id="@+id/edit_text_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
@@ -124,7 +124,7 @@
                 android:layout_marginTop="35dp"/>
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/text_view_forgot_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
@@ -135,7 +135,7 @@
                 android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+                app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
                 android:focusable="true" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -174,7 +174,7 @@
             android:clickable="true"
             android:onClick="onClickSignIn"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/sign_in"
+            android:text="@string/login"
             android:textColor="@color/primary"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
