--- a/app/src/main/res/layout/item_categories_snaks.xml
+++ b/app/src/main/res/layout/item_categories_snaks.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp"
-    android:paddingVertical="20dp"
+    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_product_list">
+    android:background="@drawable/bg_product_list"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_categories_snacks_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_snacks" />
 
     <TextView
         android:id="@+id/tv_categories_snacks_name"
@@ -15,19 +22,7 @@
         android:fontFamily="@font/poppins_medium"
         android:text="@string/profile_name"
         android:textColor="@color/primary_text"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_categories_snacks_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_categories_snacks_name"
-        app:srcCompat="@drawable/ic_snacks" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_categories_snacks_price"
@@ -37,8 +32,8 @@
         android:text="@string/price_text"
         android:textColor="@color/primary_text"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_categories_snacks_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
