--- a/app/src/main/res/navigation/botton_menu_graph.xml
+++ b/app/src/main/res/navigation/botton_menu_graph.xml
@@ -6,17 +6,17 @@
 
     <fragment
         android:id="@+id/menu"
-        android:name="com.example.coffeehouse.ui.MenuFragment"
+        android:name="com.example.coffeehouse.ui.main.menu.MenuFragment"
         android:label="fragment_menu"
         tools:layout="@layout/fragment_menu" />
     <fragment
         android:id="@+id/history"
-        android:name="com.example.coffeehouse.ui.HistoryFragment"
+        android:name="com.example.coffeehouse.ui.main.history.HistoryFragment"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
     <fragment
         android:id="@+id/profile"
-        android:name="com.example.coffeehouse.ui.ProfileFragment"
+        android:name="com.example.coffeehouse.ui.main.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
