--- a/app/src/main/res/navigation/categories_navigation.xml
+++ b/app/src/main/res/navigation/categories_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/menuCoffeeFragment"
-        android:name="com.example.coffeehouse.ui.MenuCoffeeFragment"
+        android:name="com.example.coffeehouse.ui.main.menu.MenuCoffeeFragment"
         android:label="fragment_menu_coffee"
         tools:layout="@layout/fragment_menu_coffee" />
 </navigation>
