--- a/app/src/main/res/layout/fragment_menu_coffee.xml
+++ b/app/src/main/res/layout/fragment_menu_coffee.xml
@@ -9,6 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginHorizontal="-8dp"
         android:id="@+id/rv_coffee"
+        android:nestedScrollingEnabled="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"/>
