--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -53,7 +53,7 @@
                 tools:ignore="MissingConstraints" />
 
             <EditText
-                android:id="@+id/editText_user_name"
+                android:id="@+id/et_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="46dp"
@@ -65,14 +65,12 @@
                 android:drawableStart="@drawable/ic_profile"
                 android:drawablePadding="1dp"
                 android:textSize="12sp"
-                android:clickable="true"
-                android:onClick="onClickSignIn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />
 
             <EditText
-                android:id="@+id/editText_phone_number"
+                android:id="@+id/et_phone_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="35dp"
@@ -87,10 +85,10 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText_user_name" />
+                app:layout_constraintTop_toBottomOf="@+id/et_user_name" />
 
             <EditText
-                android:id="@+id/et_sign_up_email"
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="35dp"
@@ -106,10 +104,10 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText_phone_number" />
+                app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />
 
             <EditText
-                android:id="@+id/edit_text_password"
+                android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
@@ -120,14 +118,13 @@
                 android:drawableStart="@drawable/ic_password"
                 android:drawablePadding="10dp"
 
-                app:layout_constraintTop_toBottomOf="@+id/et_sign_up_email"
+                app:layout_constraintTop_toBottomOf="@+id/et_email"
                 android:layout_marginTop="35dp"/>
 
             <TextView
                 android:id="@+id/text_view_forgot_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
                 android:text="@string/terms"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
@@ -135,7 +132,7 @@
                 android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
+                app:layout_constraintTop_toBottomOf="@+id/et_password"
                 android:focusable="true" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
