local authentication complete

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -29,7 +29,7 @@
                 tools:ignore="MissingConstraints" />
 
             <TextView
-                android:id="@+id/tv_greening"
+                android:id="@+id/tv_greeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_medium"
@@ -39,14 +39,14 @@
                 tools:ignore="MissingConstraints" />
 
             <TextView
-                android:id="@+id/profile_name_textview"
+                android:id="@+id/tv_profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/profile_name"
+                android:text="@string/add_title"
                 android:textColor="@color/primary_text"
                 android:textSize="18sp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_greening"
+                app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
                 tools:ignore="MissingConstraints" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
