--- a/app/src/main/res/layout/item_categories_coffee.xml
+++ b/app/src/main/res/layout/item_categories_coffee.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/profile_name"
+            android:text="@string/add_title"
             android:textColor="@color/primary_text"
             android:textSize="12sp" />
 
@@ -44,7 +44,7 @@
             android:id="@+id/tv_product_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/profile_name" />
+            android:text="@string/add_title" />
     </LinearLayout>
 
     <TextView
