--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,50 +14,175 @@
             android:id="@+id/tv_profile_fragment_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/poppins_medium"
+            android:layout_marginVertical="24dp"
+            android:fontFamily="@font/poppins_bold"
             android:gravity="center_horizontal"
             android:text="@string/title_profile"
             android:textColor="@color/primary_text"
             android:textSize="16sp"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_profile_fragment"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_profile_fragment_title" />
-    </LinearLayout>
-
-
-    <!--
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tv_profile_fragment_title"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/poppins_medium"
-            android:gravity="center_horizontal"
-            android:text="@string/title_profile"
-            android:textColor="@color/primary_text"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginBottom="13dp">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:padding="11dp"
+                android:src="@drawable/ic_profile"
+                android:background="@drawable/bg_circle"
+                android:backgroundTint="@color/items_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="42dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/title_name"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="11sp" />
+                <TextView
+                    android:id="@+id/tv_profile_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/add_title"
+                    android:textColor="@color/primary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_profile_fragment"
+        <LinearLayout
+            android:layout_marginVertical="13dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_profile_fragment_title" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    -->
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:padding="11dp"
+                android:src="@drawable/ic_phone"
+                android:background="@drawable/bg_circle"
+                android:backgroundTint="@color/items_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="42dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/title_phone_number"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="11sp" />
+                <TextView
+                    android:id="@+id/tv_profile_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/add_title"
+                    android:textColor="@color/primary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginVertical="13dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:padding="11dp"
+                android:src="@drawable/ic_email"
+                android:background="@drawable/bg_circle"
+                android:backgroundTint="@color/items_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="42dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/title_email"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="11sp" />
+                <TextView
+                    android:id="@+id/tv_profile_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/add_title"
+                    android:textColor="@color/primary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginVertical="13dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:padding="11dp"
+                android:src="@drawable/ic_address"
+                android:background="@drawable/bg_circle"
+                android:backgroundTint="@color/items_background"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="42dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/title_address"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="11sp" />
+                <TextView
+                    android:id="@+id/tv_profile_adress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/add_title"
+                    android:textColor="@color/primary"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_marginTop="13dp"
+            android:id="@+id/btn_exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_primary"
+            android:backgroundTint="@color/items_background"
+            android:text="@string/exit"
+            android:textColor="@color/red"
+            android:textSize="14sp"
+            android:elevation="0dp"/>
+    </LinearLayout>
 
 </FrameLayout>
