--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,31 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.authentication.RegisterFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageButton
-            android:id="@+id/bt_back_light"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/ic_arrow"
-            android:backgroundTint="@color/black"
-            android:scaleX="-1"
-            android:layout_marginTop="26dp"
-            android:layout_marginStart="26dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_main"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/bt_back_light"
-            tools:layout_editor_absoluteX="1dp"
-            android:layout_marginStart="41dp"
-            android:layout_marginEnd="41dp"
+            android:layout_marginHorizontal="41dp"
             android:layout_marginTop="46dp">
+            <ImageButton
+                android:id="@+id/bt_back_light"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/ic_arrow"
+                android:backgroundTint="@color/black"
+                android:scaleX="-1"/>
+
             <TextView
                 android:id="@+id/tv_sign_up"
                 android:layout_width="wrap_content"
@@ -39,7 +29,7 @@
                 android:textColor="@color/primary_text"
                 android:textSize="22sp"
                 android:fontFamily="@font/poppins_medium"
-                tools:ignore="MissingConstraints" />
+                android:layout_marginTop="26dp"/>
             <TextView
                 android:id="@+id/text_view_welcome"
                 android:layout_width="wrap_content"
@@ -56,7 +46,7 @@
                 android:id="@+id/et_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="46dp"
+                android:layout_marginTop="26dp"
                 android:ems="10"
                 android:fontFamily="@font/poppins_medium"
                 android:hint="@string/user_name"
@@ -77,7 +67,7 @@
 
                 android:ems="10"
                 android:fontFamily="@font/poppins_medium"
-                android:hint="@string/user_name"
+                android:hint="@string/user_phone"
                 android:inputType="phone"
                 android:textColorHint="@color/placeholder"
                 android:drawableStart="@drawable/ic_smartphone"
@@ -121,63 +111,43 @@
                 app:layout_constraintTop_toBottomOf="@+id/et_email"
                 android:layout_marginTop="35dp"/>
 
+            <EditText
+                android:id="@+id/et_password_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
+                android:fontFamily="@font/poppins_medium"
+                android:textColorHint="@color/placeholder"
+                android:textSize="12sp"
+                android:drawableStart="@drawable/ic_password"
+                android:drawablePadding="10dp"
+
+                app:layout_constraintTop_toBottomOf="@+id/et_email"
+                android:layout_marginTop="35dp"/>
             <TextView
+                android:gravity="center"
                 android:id="@+id/text_view_forgot_password"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/terms"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 android:textColor="@color/primary"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="15dp"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="46dp">
+            <ImageButton
+                android:id="@+id/bt_forward_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_circle"
+                android:src="@drawable/ic_arrow"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_password"
-                android:focusable="true" />
-
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ImageButton
-            android:id="@+id/bt_forward_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="41dp"
-            android:background="@drawable/bg_circle"
-            android:src="@drawable/ic_arrow"
-            android:onClick="onClickForward"
-            app:layout_constraintTop_toBottomOf="@+id/layout_main"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@string/already_member"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/secondary_text"
-            android:textSize="14sp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/layout_main"
-            app:layout_constraintTop_toBottomOf="@+id/bt_forward_signup" />
-
-        <TextView
-            android:id="@+id/btn_sign_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="onClickSignIn"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/login"
-            android:textColor="@color/primary"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView5"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            android:focusable="true" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
 </FrameLayout>
