--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/profile_name"
+        android:text="@string/add_title"
         android:textColor="@color/secondary_text"
         android:textSize="11sp"
         tools:layout_editor_absoluteX="85dp"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="58dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/profile_name"
+        android:text="@string/add_title"
         android:textColor="@color/primary"
         android:textSize="14sp"
         tools:layout_editor_absoluteX="57dp"
