--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="EditTextError" parent="Widget.AppCompat.EditText">
-        <item name="colorAccent">@color/error</item>
-        <item name="colorControlActivated">@color/error</item>
+        <item name="colorAccent">@color/red</item>
+        <item name="colorControlActivated">@color/red</item>
     </style>
 
     <style name="TabSelectedText" parent="@android:style/TextAppearance.Widget.TabWidget">
