--- a/app/src/main/res/layout/fragment_cart_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_cart_recycle_view.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="32dp"
+            android:layout_marginVertical="32dp"
             android:gravity="bottom">
 
             <Button
