--- a/app/src/main/res/navigation/navgraph_cart.xml
+++ b/app/src/main/res/navigation/navgraph_cart.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_cart_recycle_view" >
         <action
             android:id="@+id/action_cartRecycleViewFragment_to_oopsFragment"
-            app:destination="@id/oopsFragment" />
+            app:destination="@id/oopsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/oopsFragment"
