--- a/app/src/main/res/layout/fragment_menu_coffee.xml
+++ b/app/src/main/res/layout/fragment_menu_coffee.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.menu.MenuCoffeeFragment">
+    tools:context=".ui.main.menu.categories.CoffeeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginHorizontal="-8dp"
