--- a/app/src/main/res/navigation/navgraph_main_activity.xml
+++ b/app/src/main/res/navigation/navgraph_main_activity.xml
@@ -26,7 +26,7 @@
     </fragment>
     <fragment
         android:id="@+id/coffeeConfigFragment"
-        android:name="com.example.coffeehouse.ui.main.menu.CoffeeConfigFragment"
+        android:name="com.example.coffeehouse.ui.main.menu.DetailsFragment"
         android:label="fragment_coffee_config"
         tools:layout="@layout/fragment_coffee_config" >
         <action
