--- a/app/src/main/res/layout/fragment_coffee_config.xml
+++ b/app/src/main/res/layout/fragment_coffee_config.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.menu.CoffeeConfigFragment">
+    tools:context=".ui.main.menu.DetailsFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_marginHorizontal="25dp"
         android:layout_width="match_parent"
@@ -37,6 +37,7 @@
                 android:textSize="16sp"
                 android:text="@string/product_name" />
             <ImageView
+                android:id="@+id/tv_product_image"
                 android:layout_width="match_parent"
                 android:layout_height="128dp"
                 android:background="@drawable/bg_product_list"
