--- a/app/src/main/res/layout/fragment_snack.xml
+++ b/app/src/main/res/layout/fragment_snack.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.menu.SnackFragment">
+    tools:context=".ui.main.menu.categories.SnackFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginHorizontal="-8dp"
