--- a/app/src/main/res/layout/item_menu_product.xml
+++ b/app/src/main/res/layout/item_menu_product.xml
@@ -9,9 +9,9 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iv_categories_snacks_image"
+        android:id="@+id/iv_product_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         app:srcCompat="@drawable/ic_product"/>
     <TextView
         android:id="@+id/tv_product_name"
