--- a/app/src/main/res/layout/fragment_cart_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_cart_recycle_view.xml
@@ -7,11 +7,12 @@
     tools:context=".ui.main.cart.CartRecycleViewFragment">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent">
         <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_container"
